; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_ctresource.c_mgr_put_resource.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ctxfi/extr_ctresource.c_mgr_put_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rsc_mgr = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mgr_put_resource(%struct.rsc_mgr* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.rsc_mgr*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.rsc_mgr* %0, %struct.rsc_mgr** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.rsc_mgr*, %struct.rsc_mgr** %4, align 8
  %8 = getelementptr inbounds %struct.rsc_mgr, %struct.rsc_mgr* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @put_resource(i32 %9, i32 %10, i32 %11)
  %13 = load i32, i32* %5, align 4
  %14 = load %struct.rsc_mgr*, %struct.rsc_mgr** %4, align 8
  %15 = getelementptr inbounds %struct.rsc_mgr, %struct.rsc_mgr* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = add i32 %16, %13
  store i32 %17, i32* %15, align 4
  ret i32 0
}

declare dso_local i32 @put_resource(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
